@@ -12,10 +12,35 @@ ccf.series.rwl <- function(rwl, series,
     }
     seg.lag <- seg.length / 2
 
+    ## Handle different types of 'series'
+    if (length(series) == 1) {
+        if (is.character(series)) {
+            seriesIdx <- logical(ncol(rwl))
+            seriesIdx[colnames(rwl) == series] <- TRUE
+            nMatch <- sum(seriesIdx)
+            if (nMatch == 0) {
+                stop("'series' not found in 'rwl'")
+            } else if (nMatch != 1) {
+                stop("duplicate column names, multiple matches")
+            }
+            rwl2 <- rwl[, !seriesIdx, drop = FALSE]
+            series2 <- rwl[, seriesIdx]
+            names(series2) <- rownames(rwl)
+        } else if (is.numeric(series) && is.finite(series) &&
+                   series >=1 && series < ncol(rwl) + 1) {
+            rwl2 <- rwl[, -series, drop = FALSE]
+            series2 <- rwl[, series]
+            names(series2) <- rownames(rwl)
+        } else {
+            stop("'series' of length 1 must be a column index to 'rwl'")
+        }
+    } else {
+        rwl2 <- rwl
+        series2 <- series
+        names(series2) <- series.yrs
+    }
     ## Normalize.
-    series2 <- series
-    names(series2) <- series.yrs
-    tmp <- normalize.xdate(rwl, series2, n, prewhiten, biweight)
+    tmp <- normalize.xdate(rwl2, series2, n, prewhiten, biweight)
     master <- tmp$master
 
     ## trim master so there are no NaN like dividing when only one
@@ -76,7 +101,7 @@ ccf.series.rwl <- function(rwl, series,
             bin.ccf <- NA
         }
         else {
-            tmp <- ccf(series2[mask], master[mask], lag.max=lag.max, 
+            tmp <- ccf(series2[mask], master[mask], lag.max=lag.max,
                        plot=FALSE)
             bin.ccf <- as.vector(tmp$acf)
         }
