@@ -15,10 +15,15 @@ ccf.series.rwl(rwl, series, series.yrs = as.numeric(names(series)),
 \arguments{
   \item{rwl}{ a \code{data.frame} with series as columns and years as rows
     such as that produced by \code{\link{read.rwl}}. }
-  \item{series}{ a \code{numeric} vector. Usually a tree-ring series. }
+  \item{series}{ a \code{numeric} or \code{character} vector.  Usually a
+    tree-ring series.  If the length of the value is 1, the
+    corresponding column of \code{\var{rwl}} is selected (by name or
+    position) as the series and ignored when building the master
+    chronology.  Otherwise, the value must be \code{numeric}. }
   \item{series.yrs}{ a \code{numeric} vector giving the years of
     \code{\var{series}}.  Defaults to
-    \code{as.numeric(names(\var{series}))}. }
+    \code{as.numeric(names(\var{series}))}.  Ignored if
+    \code{\var{series}} is an index to a column of \code{\var{rwl}}. }
   \item{seg.length}{ an even integral value giving length of segments in
     years (e.g., 20, 50, 100 years). }
   \item{bin.floor}{ a non-negative integral value giving the base for
@@ -103,5 +108,13 @@ flagged <- c(NA, flagged[-325])
 names(flagged) <- rownames(dat)
 dat$"641143" <- NULL
 ccf.100 <- ccf.series.rwl(rwl = dat, series = flagged, seg.length = 100)
+\dontrun{
+## Select series by name or column position
+ccf.100.2 <- ccf.series.rwl(rwl = co021, seg.length = 100,
+                            series = "641143")
+ccf.100.3 <- ccf.series.rwl(rwl = co021, seg.length = 100,
+                            series = which(colnames(co021) == "641143"))
+identical(ccf.100.2, ccf.100.3)
+}
 }
 \keyword{ manip }
